--- a/beach-portfolio/pages/new-page.html
+++ b/beach-portfolio/pages/new-page.html
@@ -6,5 +6,9 @@
   </head>
   <body>
     <p>my new page!</p>
+
+    <!-- use ../ to step back out of the folder containing this file -->
+    <!-- i.e., step back into the root directory, and then go into the img folder -->
+    <img src="../img/pitbull-puppy.jpg">
   </body>
 </html>
