--- a/beach-portfolio/pages/new-page.html
+++ b/beach-portfolio/pages/new-page.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>new page</title>
+
+    <link rel="stylesheet" href="../css/styles.css">
   </head>
   <body>
     <p>my new page!</p>
@@ -10,5 +12,6 @@
     <!-- use ../ to step back out of the folder containing this file -->
     <!-- i.e., step back into the root directory, and then go into the img folder -->
     <img src="../img/pitbull-puppy.jpg">
+    <img src="../img/beaers-logo.png" alt="i show up if it breaks!">
   </body>
 </html>
