--- a/beach-portfolio/index.html
+++ b/beach-portfolio/index.html
@@ -16,13 +16,14 @@ language
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,400italic,700,700italic' rel='stylesheet' type='text/css">
   <!-- links us to an external css file -->
   <link rel="stylesheet" href="css/styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <div class="navbar-container">
     <div class="navbar">
       <a href="#"><div>home</div></a>
       <div>about</div>
-      <div>contact</div>
+      <a href="pages/my-form.html"><div>contact</div></a>
     </div>
   </div>
 
