--- a/beach-portfolio/index.html
+++ b/beach-portfolio/index.html
@@ -13,43 +13,58 @@ language
 <head>
   <title>my website</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Raleway:400,400italic,700,700italic' rel='stylesheet' type='text/css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:100" rel="stylesheet" type="text/css">
+
+  <!-- bootstrap cdn link -->
+  <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
+
+  <!-- Latest compiled and minified CSS -->
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
+
   <!-- links us to an external css file -->
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <div class="navbar-container">
-    <div class="navbar">
-      <a href="#"><div>home</div></a>
-      <div>about</div>
-      <a href="pages/my-form.html"><div>contact</div></a>
+  <div class="container-fluid no-padding text-center">
+    <h1>beachcoders portfolio</h1>
+    <hr>
+
+    <h1>projects</h1>
+
+    <div class="row">
+      <div class="col-md-4">
+        <h2>contact form</h2>
+        <a href="#"><img class="img-thumbnail project-img" src="img/contact-form.png" alt=""></a>
+        <p><strong>languages used:</strong> HTML, CSS</p>
+        <p><strong>libraries used:</strong> Bootstrap</p>
+        <p>a simple contact form. here's some more text, because i can't deal.</p>
+        <a class="btn btn-default" href="#" role="button">check it out!</a>
+      </div>
+      <div class="col-md-4">
+        <h2>get the best</h2>
+        <img class="img-thumbnail project-img" src="img/get-the-best.png" alt="">
+        <p><strong>languages used:</strong> HTML, CSS, JS</p>
+        <p><strong>libraries used:</strong> jQuery, Underscore, Marionette</p>
+        <p>allows you to look up an artist and find their top 10 songs in the US, according to spotify</p>
+        <a class="btn btn-default" href="#" role="button">check it out!</a>
+      </div>
+      <div class="col-md-4">
+        <h2>get the best</h2>
+        <img class="img-thumbnail project-img" src="img/get-the-best.png" alt="">
+        <p><strong>languages used:</strong> HTML, CSS, JS</p>
+        <p><strong>libraries used:</strong> jQuery, Underscore, Marionette</p>
+        <p>allows you to look up an artist and find their top 10 songs in the US, according to spotify</p>
+        <a class="btn btn-default" href="#" role="button">check it out!</a>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="github-info">
+        <a href="http://github.com/akingdebased"><img class="github-img" src="img/github-icon.png" alt="">
+        <span><strong>akingdebased</strong></span></a>
+      </div>
     </div>
   </div>
-
-  <div class="center-text">
-    <h1>my beachcoders portfolio</h1>
-    <img src="img/beach-coders-logo.png">
-  </div>
-  <hr>
-
-  <div>
-    <iframe class="page-video" width="560" height="315" src="https://www.youtube.com/embed/nKIu9yen5nc" frameborder="0" allowfullscreen></iframe>
-
-    <h1 class="center-text">projects</h1>
-    <h2 class="center-text" id="special-text">portfolio site</h2>
-    <a href="">
-      <img class="project-image" src="img/project1.png" alt="">
-    </a>
-
-    <p class="center-text">a simple portfolio site for all my work here at beachcoders!</p>
-    <a class="center-text" href="#">check it out!</a>
-  </div>
-  <p>listen to this smooth jam</p>
-  <audio controls>
-    <source src="media/say-it-isnt-so.mp3"/>
-  </audio>
-
-  <iframe class="page-video" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4833.050945754053!2d-118.39122744602273!3d33.92520690033246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b6b4169a6f27%3A0xa8cab144be23c59b!2s615+N+Nash+St%2C+El+Segundo%2C+CA+90245!5e0!3m2!1sen!2sus!4v1465324627647" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 </body>
 </html>
