updated rock, paper, scisssors for 6/17

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -6,6 +6,13 @@
   </head>
   <body>
     <h1>let's play rock paper scissors!</h1>
+     rock <input type="radio" name="hand" value="rock">
+    paper <input type="radio" name="hand" value="paper">
+    scissors <input type="radio" name="hand" value="scissors">
+
+    <button class="play-game">play game</button>
+    <span>player</span> <span class="player-wins"></span>
+    <span>computer</span> <span class="comp-wins"></span>
     <div class="results"></div>
 
   <script src="js/scripts.js"></script>
