add password verification code

--- a/fancy-form/index.html
+++ b/fancy-form/index.html
@@ -18,8 +18,8 @@
   <div class="container">
     <form action="">
       <input class="form-control name" placeholder="name ..." type="text">
-      <input class="form-control password" placeholder="password ..." type="text">
-      <input class="form-control verify" placeholder="verify password ..." type="text">
+      <input class="form-control password" placeholder="password ..." type="password">
+      <input class="form-control verify" placeholder="verify password ..." type="password">
       <input class="form-control email" type="email" placeholder="email ...">
       <input class="form-control date" type="date">
       <textarea class="form-control message" placeholder="message ..."></textarea>
