--- a/get-the-best/index.html
+++ b/get-the-best/index.html
@@ -15,17 +15,25 @@
       <h3>the best, the best, the best of tunes</h3>
       <hr>
       <input type="text" class="form-control artist-search" placeholder="artist name ...">
+      <select class="form-control country-select">
+        <option value="US">United States</option>
+        <option value="IN">India</option>
+        <option value="ES">Spain</option>
+        <option value="MX">Mexico</option>
+        <option value="RU">Russia</option>
+        <option value="DE">Germany</option>
+      </select>
     </div>
     <div class="top-tracks">
     </div>
   </div>
 
   <script class="track-template" type="template">
-    <div>
-      <h3 class="title"><%= title %></h3>
-      <%= artist %> - <%= album %>
-      <span url="<%= songUrl %>" class="glyphicon glyphicon-play-circle play"></span>
-    </div>
+  <div>
+  <h3 class="title"><%= title %></h3>
+  <a href="<%= artistUrl %>"><%= artist %></a> - <a href="<%= albumUrl %>"><%= album %></a>
+  <span url="<%= songUrl %>" class="glyphicon glyphicon-play-circle play"></span>
+  </div>
   </script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
